--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 A common challenge in bioinformatics is to identify unique sequences of a given size W, where uniqueness is defined as the absence of other sequences that differ by less than k mismatches. Applications include finding sequences unique to a pathogen for infection diagnostics; identifying unique CRISPR target candidate regions and detecting phage or viral insertions. 
 microTaboo is a tool that addresses these challenges and allows for efficient and extensive sequence mining of entire genomes for sequences up to 100 nucleotides in size in nucleotide space. In addition microTaboo can also be used to find sequences in a FASTA file that only occur once. Moreover if you want to find unique sequences that are not only occur once in your fasta file, but differ from any other sequence by a number of mismatches, then microTaboo should be your app of choice.
 <br><br>
-microTaboo runs able to run on Windows, Mac OS and Linux, running Java 7 or higher. Additionally, for smaller tasks (say FASTA files under 10mb), microTaboo can be run on a laptops/desktop computers with 8 or more gigabytes of RAM. 
+microTaboo is able to run on Windows, Mac OS and Linux, running Java 7 or higher. Additionally, for smaller tasks (say FASTA files under 10mb), microTaboo can be run on a laptops/desktop computers with 8 or more gigabytes of RAM. 
 </p>
 <hr>
 
