--- a/index.html
+++ b/index.html
@@ -43,21 +43,17 @@ microTaboo is able to run on Windows, Mac OS and Linux, running Java 7 or higher
 
 <h3>
 <a id="key-concepts" class="anchor" href="#key-concepts" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
-<a id="dinmamma" href="#dinmamma"></a>Key concepts</h3>
-<p><em><strong>Definition: The k-disjoint problem :</strong></em> 
+<a id="dinmamma" href="#dinmamma"></a>The key concept</h3>
+<p><em><strong>Definition: The k-disjoint problem</strong></em> 
 <br><br>
 (set-theoretic formulation)
 <br>
-Given two sets A and B containing sequences of length W, find all sequences X in A such that X is more than k mismatches away from any sequence Y in B. 
-The result one obtains is the so-called <em><strong>k-disjoint</strong></em> set of A and B. 
-The complement of the result is the <em><strong>k-intersection</strong></em> of A and B,
-i.e the set of sequences in A that are at most k mismatches away from something in B.
+Given two sets <em>A</em> and <em>B</em> containing sequences of length <em>W</em>, find all sequences <em>X</em> in <em>A</em> such that <em>X</em> is more than <em>k</em> mismatches away from any sequence <em>Y</em> in <em>B</em>. 
+The result one obtains is the so-called <em><strong>k-disjoint</strong></em> set of <em>A</em> and <em>B</em>. 
+The complement of the result is the <em><strong>k-intersection</strong></em> of <em>A</em> and <em>B</em>,
+i.e the set of sequences in <em>A</em> that are at most <em>k</em> mismatches away from <em>something</em> in <em>B</em>.
 <br><br>
 <em>Alternatively</em>
-<br>
-Let A and B be two sets containing sequences of length W. 
-The k-disjoint of A and B is the set containing all sequences X in A such that X is at least k edit distances away from Y for all Y in B. 
-Finding the k-disjoint of A and B is called the k-disjoint problem.
 <br><br>
 ("strings and index" formulation)
 <br>
