--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ i.e the set of sequences in <em>A</em> that are at most <em>k</em> mismatches aw
 <br><br>
 ("strings and index" formulation)
 <br>
-Given two fixed positive integer value parameters <em>W</em> and <em>k</em> as well as two strings <em>P</em> and <em>T</em> where <em>P</em> has length <em>n</em> and <em>T</em> has length <em>m</em>, 
+Given two fixed positive integer parameter values <em>W</em> and <em>k</em> as well as two strings <em>P</em> and <em>T</em> where <em>P</em> has length <em>n</em> and <em>T</em> has length <em>m</em>, 
 the <strong><em>k-disjoint</em></strong> problem consists of finding all positions <em>i</em> (0<<em>i</em><<em>n</em>+1) which have the property that a <em>W</em> length substring of <em>P</em> 
 beginning at <em>i</em> is at least <em>k</em> edit distances away from any <em>W</em> long substring of <em>T</em>.
 </p>
