--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@ i.e the set of sequences in <em>A</em> that are at most <em>k</em> mismatches aw
 <br>
 Given two fixed positive integer parameter values <em>W</em> and <em>k</em> as well as two strings <em>P</em> and <em>T</em> where <em>P</em> has length <em>n</em> and <em>T</em> has length <em>m</em>, 
 the <strong><em>k-disjoint</em></strong> problem consists of finding all positions <em>i</em> (0<<em>i</em><<em>n</em>+1) which have the property that a <em>W</em> length substring of <em>P</em> 
-beginning at <em>i</em> is at least <em>k</em> edit distances away from any <em>W</em> long substring of <em>T</em>.
+beginning at <em>i</em> is at least <em>k</em> mismatches away from any <em>W</em> long substring of <em>T</em>. 
+The <em><strong>k-intersection</strong></em> would then be all other indices <em>j</em> in <em>P</em>.
+These indices have the property that a <em>W</em> long substring beginning at each of these <em>j</em>:s would have a <em>W</em> long substring
+somewhere in <em>T</em> which is at most <em>k</em> mismatches away.
 </p>
 
 <hr>
