--- a/index.html
+++ b/index.html
@@ -72,7 +72,12 @@ somewhere in <em>T</em> which is at most <em>k</em> mismatches away.
 How to use microTaboo to solve you k-mismatch problem</h3>
 <br><br>
 <font color="red">Note: microTaboo requires Java SE Runtime Environment 7</font> <br><br>
-<p>Below we give a step-by-step procedure of how to use microTaboo:<br><br>
+<p>In this section, we will show you how to use microTaboo to solve your k-disjoint problem. 
+Now you might be thinking: "I don't have one". That's okay, we got you covered, we prepared a folder containingt three example runs.
+These you can find and download through the right-most button at the top of the page. Each example run contains the software, all necessary folders
+together with the FASTA files inside of these. All you need to do is to download and follow the readme, first in the main folder and then
+in the respective sub-folders.
+<br><br>
 
 1. Create a folder/directory, you can name this folder/directory whatever you want as long as you know where it is. For the sake of example, we call our folder/directory F.<br><br>
 
@@ -106,7 +111,7 @@ on your machine, it also gives you some practice on microTaboo.
 <a id="getting-started" href="#getting-started"></a>
 How to use microTaboo to find sequences in a FASTA file that occur only once</h3>
 
-<p>In this section, we'll show how microTaboo can be used to find all sequences of 
+<p>In this section, we'll show you how to use microTaboo can be used to find all sequences of 
 length in a FASTA file, eg a whole genome sequence FASTA, that occur only once. In other words, here we'll try to 
 find only unique sequences in a FASTA file relative to it self. Below are instructions on how you could
 do this with microTaboo.<br></br>
