--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ somewhere in <em>T</em> which is at most <em>k</em> mismatches away.
 <h3>
 <a id="how-to-use-microtaboo-to-solve-you-k-mismatch-problem" class="anchor" href="#how-to-use-microtaboo-to-solve-you-k-mismatch-problem" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
 <a id="getting-started" href="#getting-started"></a>
-How to use microTaboo to solve you k-mismatch problem</h3>
+How to use microTaboo to solve your k-disjoint problem</h3>
 <br><br>
 <font color="red">Note: microTaboo requires Java SE Runtime Environment 7</font> <br><br>
 <p>In this section, we will show you how to use microTaboo to solve your k-disjoint problem. 
