--- a/index.html
+++ b/index.html
@@ -69,19 +69,18 @@ somewhere in <em>T</em> which is at most <em>k</em> mismatches away.
 <h3>
 <a id="how-to-use-microtaboo-to-solve-you-k-mismatch-problem" class="anchor" href="#how-to-use-microtaboo-to-solve-you-k-mismatch-problem" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
 <a id="getting-started" href="#getting-started"></a>
-How to use microTaboo to solve your k-disjoint problem</h3>
+How to use microTaboo to solve your <em>k</em>-disjoint problem</h3>
 
 <font color="red">Note: microTaboo requires Java SE Runtime Environment 7</font> <br><br>
 
 <p>In this section, we will show you how to use microTaboo to solve your k-disjoint problem. 
-Now you might be thinking: "I don't have one". That's okay, we got you covered, we prepared a folder containingt three example runs.
-These you can find and download through the right-most button at the top of the page. Each example run contains the software, all necessary folders
+Now you might be thinking: "I don't have one". That's okay, we got you covered. We have prepared a folder containingt three example runs.
+You can find and download them by clicking the right-most button at the top of the page. Each example run contains microTaboo, all necessary folders
 together with the FASTA files inside of these. All you need to do is to download and follow the readme, first in the main folder and then
 in the respective sub-folders.
 <br><br><br>
-Example runs aside, below we give a step-by-step guide for you to run microTaboo on your FASTA files. <br>
-Before we start, we should mention that microTaboo is good at two things: solving k-disjoint problems but also finding
-sequences which are self-relative unique. If you want to setup a disjoint problem, look directly below.
+Example runs aside, below we give a step-by-step guide for you to run microTaboo on your own FASTA files. <br>
+Here you have to decide on what microTaboo should do for you. If you want it to find a k-disjoint look at the instructions directly below.
 Otherwise, if your aim is to find sequences that occur only once in a FASTA file, look at the next section.
 
 <br>
