--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@ How to use microTaboo to solve your <em>k</em>-disjoint problem</h3>
 Now you might be thinking: "I don't have one". That's okay, we got you covered. We have prepared a folder containingt three example runs.
 You can find and download them by clicking the right-most button at the top of the page. Each example run contains microTaboo, all necessary folders
 together with the FASTA files inside of these. All you need to do is to download and follow the readme, first in the main folder and then
-in the respective sub-folders.
+in the respective sub-folders. These are meant to check if microTaboo runs properly on your system and also gives you some practice using microTaboo.
 <br><br><br>
 Example runs aside, below we give a step-by-step guide for you to run microTaboo on your own FASTA files. <br>
 Here you have to decide on what microTaboo should do for you. If you want it to find a k-disjoint look at the instructions directly below.
 Otherwise, if your aim is to find sequences that occur only once in a FASTA file, look at the next section.
 
-<br>
+<br><br>
 
 
 1. Create a folder/directory, you can name this folder/directory whatever you want as long as you know where it is. For the sake of example, we call our folder/directory F.<br><br>
@@ -102,13 +102,10 @@ For our example, we would write the following:<br>
 &gt;  java -Xmx6000m -jar microTaboo.jar A B R 20 3 d 3 s;<br>
 That is, we're specifying that we would like  microTaboo to give us the k-disjoint, where k=3, of the contents in A and B  and put the result files into the subfolder R.  
 In other words, we would like microTaboo to give us a file containing all sequences of length 20 in A that are at least 3 mismatches away from anything/any sequence in B.
+<br><br>
+There you go. You’ve hopefully now run microTaboo successfully on your own FASTA files to solve your k-disjoint or k-interesction problem.
+
 <br>
-There you go. You’ve hopefully now run microTaboo successfully.
-<br>
-A zip file called ExampleRuns.zip is provided on the github page. Unzipping the file gives you a folder containing three subfolders
-where each subfolder contains a test case with a readme files. These are meant to be downloaded and used as a verification to see
-if microTaboo actually runs on your system. Follow the instructions in the readme files, not only do you check if everything runs
-on your machine, it also gives you some practice on microTaboo.
 </p>
 
 <hr>
