--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@ microTaboo is a tool that addresses these challenges and allows for efficient an
 In addition, microTaboo can also be used to find sequences in a FASTA file that only occur once. Moreover, if you want to find unique sequences that not only occur once in your FASTA file, but differ from any other sequence by a number of mismatches, then microTaboo should be your tool of choice.
 All output resilts come in a two column comma separated values (position, sequence) format.
 <br><br>
+>NC_000913.3 E.coli str K.12 ...
+566070,GTACCCG...<br>
+566071,TACCCGG...<br>
+566072,ACCCGGA...
+<br><br>
 microTaboo is able to run on Windows, Mac OS and Linux, running Java 7 or higher. Additionally, for smaller tasks (say FASTA files under 10mb), microTaboo can be run on a laptops/desktop computers with 8 or more gigabytes of RAM. 
 </p>
 <hr>
