--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 A common challenge in bioinformatics is to identify unique sequences of a given size, where uniqueness is defined as the absence of other sequences that differ by less than a number of mismatches. Applications include finding sequences unique to a pathogen for infection diagnostics; identifying unique CRISPR target candidate regions and detecting phage or viral insertions. 
 microTaboo is a tool that addresses these challenges and allows for efficient and extensive sequence mining of entire genomes for sequences up to 100 nucleotides in size in nucleotide space. 
 In addition, microTaboo can also be used to find sequences in a FASTA file that only occur once. Moreover, if you want to find unique sequences that not only occur once in your FASTA file, but differ from any other sequence by a number of mismatches, then microTaboo should be your tool of choice.
-All output resilts come in a two column comma separated values (position, sequence) format.
+All output results come in a two column comma separated values (position, sequence) format.
 <br><br>
 >NC_000913.3 E.coli str K.12 ...
 566070,GTACCCG...<br>
