--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ A common challenge in bioinformatics is to identify unique sequences of a given 
 microTaboo is a tool that addresses these challenges and allows for efficient and extensive sequence mining of entire genomes for sequences up to 100 nucleotides in size in nucleotide space. 
 In addition, microTaboo can also be used to find sequences in a FASTA file that only occur once. Moreover, if you want to find unique sequences that not only occur once in your FASTA file, but differ from any other sequence by a number of mismatches, then microTaboo should be your tool of choice.
 All output results come in a two column comma separated values (position, sequence) format.
-<br><br>
+<br><br>Example:<br>
 >NC_000913.3 E.coli str K.12 ...<br>
 566070,GTACCCG...<br>
 566071,TACCCGG...<br>
