--- a/index.html
+++ b/index.html
@@ -156,6 +156,12 @@ Additionally, should unknown bases other than N's be present in an input FASTA f
 treat them as such.
 </p>
 <br><br>
+<font color="red">Note on RAM limitaitons and FASTA file size limitations.</font>
+<p>
+FASTA files larger than 50Mb needs to be chopped up and given FASTA headears if these are to be placed in B.<br>
+RAM allocation should be based on your largest FASTA file, give microTaboo 1GB per Mb in your largest file.
+</p>
+<br><br>
 
 </p>
 
