--- a/index.html
+++ b/index.html
@@ -162,8 +162,32 @@ FASTA files larger than 50Mb needs to be chopped up and given FASTA headears if 
 RAM allocation should be based on your largest FASTA file, give microTaboo 1GB per Mb in your largest file.
 </p>
 <br><br>
-
 </p>
+
+<br><br>
+<hr>
+<h3>Parameter table</h3>
+<table>
+  <tr>
+    <th>Parameter</th>
+    <th>Value Range</th>
+    <th>Description</th>
+  </tr>
+  <tr>
+    <td>Xmx#m</td>
+    <td>2000 < # < MAX</td>
+    <td>Maximum RAM microTaboo can allocate</td>
+  </tr>
+  <tr>
+    <td>W</td>
+    <td>10 < 100</td>
+    <td>Can be any multiple of 3,4 or 5 (N). Minimum value is 2*N. Recommended max value is 20*N</td>
+  </tr>
+  
+  
+  
+  
+</table>
 
 </code></pre>
 
