--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a href="https://github.com/MohammedAlJaff/microTaboo" class="btn">View on GitHub</a>
       <a href="https://github.com/MohammedAlJaff/microTaboo/zipball/Branch1" class="btn">Download .zip</a>
       <a href="https://github.com/MohammedAlJaff/microTaboo/tarball/Branch1" class="btn">Download .tar.gz</a>
-      <a href="/MohammedAlJaff/microTaboo/raw/Branch1/ExampleRunsmicroTaboo.zip" class="btn btn-sm " id="raw-url">Example Runs</a>
+      <a href="/MohammedAlJaff/microTaboo/raw/Branch1/ExampleRunsmicroTaboo.zip" class="btn>Example Runs</a>
     </section>
 
     <section class="main-content">
