--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a href="https://github.com/MohammedAlJaff/microTaboo" class="btn">View on GitHub</a>
       <a href="https://github.com/MohammedAlJaff/microTaboo/zipball/Branch1" class="btn">Download .zip</a>
       <a href="https://github.com/MohammedAlJaff/microTaboo/tarball/Branch1" class="btn">Download .tar.gz</a>
-      <a href="https://github.com/MohammedAlJaff/microTaboo/raw/Branch1/ExampleRunsmicroTaboo.zip" class="btn">ExampleRuns</a>
+      <a href="https://github.com/MohammedAlJaff/microTaboo/Branch1/ExampleRuns.zip" class="btn" download>ExampleRuns</a>
     </section>
 
     <section class="main-content">
@@ -158,8 +158,10 @@ treat them as such.
 <br><br>
 <font color="red">Note on RAM limitaitons and FASTA file size limitations.</font>
 <p>
-FASTA files larger than 50Mb needs to be chopped up and given FASTA headears if these are to be placed in B.<br>
-RAM allocation should be based on your largest FASTA file, give microTaboo 1GB per Mb in your largest file.
+-FASTA files larger than 50Mb needs to be chopped up and given FASTA headears if these are to be placed in B.<br>
+-RAM allocation should be based on your largest FASTA file, give microTaboo 1GB per Mb in your largest file.
+-For FASTA files placed in the "A" directory, ie your query files, make sure they are less than 500mb. Otherwise, it's recomended to chop it up 
+with appropriate FASTA headers.
 </p>
 <br><br>
 </p>
