--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ There you go. You’ve hopefully now run microTaboo successfully on your own FAS
 <a id="getting-started" href="#getting-started"></a>
 How to use microTaboo to find sequences in a FASTA file that occur only once</h3>
 
-<p>In this section, we'll show you how to use microTaboo can be used to find all sequences of 
+<p>In this section, we'll show you how microTaboo can be used to find all sequences of 
 length in a FASTA file, eg a whole genome sequence FASTA, that occur only once. In other words, here we'll try to 
 find only unique sequences in a FASTA file relative to it self. Below are instructions on how you could
 do this with microTaboo.<br></br>
