--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@ There you go. You’ve hopefully now run microTaboo successfully on your own FAS
 How to use microTaboo to find sequences in a FASTA file that occur only once</h3>
 
 <p>In this section, we'll show you how microTaboo can be used to find all sequences of 
-length in a FASTA file, eg a whole genome sequence FASTA, that occur only once. In other words, here we'll try to 
-find only unique sequences in a FASTA file relative to it self. Below are instructions on how you could
+a given length in a FASTA file, eg a whole genome sequence FASTA, that occur only once. In other words, here we'll try to 
+find only unique sequences in a FASTA file relative to it self. Below are instructions on how we could
 do this with microTaboo.<br></br>
 
 1. Create two separate folders (A and B), each one containing the FASTA file(s) for the same organism of interest. 
