--- a/index.html
+++ b/index.html
@@ -164,6 +164,12 @@ treat them as such.
 with appropriate FASTA headers.
 </p>
 <br><br>
+<font color="red">Note on accepted file types</font>
+<p>
+Make sure all files in query directory (A) and "taboo" directory (B) are files in FASTA format with either of following
+file endings: <br>.txt, .fna or .fasta
+</p>
+
 </p>
 
 <br><br>
