--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ with appropriate FASTA headers.
 <font color="red">Note on accepted file types</font>
 <p>
 Make sure all files in query directory (A) and "taboo" directory (B) are files in FASTA format with either of following
-file endings: <br>.txt, .fna or .fasta
+file endings: .txt, .fna or .fasta
 </p>
 
 </p>
