--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ How to use microTaboo to solve your <em>k</em>-disjoint problem</h3>
 <font color="red">Note: microTaboo requires Java SE Runtime Environment 7</font> <br><br>
 
 <p>In this section, we will show you how to use microTaboo to solve your k-disjoint problem. 
-Now you might be thinking: "I don't have one". That's okay, we got you covered. We have prepared a folder containingt three example runs.
+Now you might be thinking: "I don't have one". That's okay, we got you covered. We have prepared a folder containing three example runs.
 You can find and download them by clicking the right-most button at the top of the page or in the repository. Each example run contains microTaboo, all necessary folders
 together with the FASTA files inside of these. All you need to do is to download and follow the readme, first in the main folder and then
 in the respective sub-folders. These are meant to check if microTaboo runs properly on your system and also gives you some practice using microTaboo.
